c/experimental/stf/include/cccl/c/experimental/stf/stf.h


typedef struct stf_exec_place_opaque_t* stf_exec_place_handle;
typedef struct stf_data_place_opaque_t* stf_data_place_handle;
typedef struct stf_green_context_helper_opaque_t* stf_green_context_helper_handle;
typedef struct stf_exec_place_scope_opaque_t* stf_exec_place_scope_handle;
typedef struct stf_exec_place_resources_opaque_t* stf_exec_place_resources_handle;
typedef struct stf_ctx_handle_t* stf_ctx_handle;
typedef struct stf_pos4
{
  int64_t x; 
  int64_t y; 
  int64_t z; 
  int64_t t; 
} stf_pos4;
typedef struct stf_dim4
{
  uint64_t x; 
  uint64_t y; 
  uint64_t z; 
  uint64_t t; 
} stf_dim4;
typedef void (*stf_get_executor_fn)(stf_pos4* result, stf_pos4 data_coords, stf_dim4 data_dims, stf_dim4 grid_dims);
stf_exec_place_handle stf_exec_place_host(void);
stf_exec_place_handle stf_exec_place_device(int dev_id);
stf_exec_place_handle stf_exec_place_current_device(void);
stf_exec_place_handle stf_exec_place_cuda_context(CUcontext ctx, int dev_id);
stf_green_context_helper_handle stf_green_context_helper_create(int sm_count, int dev_id);
void stf_green_context_helper_destroy(stf_green_context_helper_handle h);
size_t stf_green_context_helper_get_count(stf_green_context_helper_handle h);
int stf_green_context_helper_get_device_id(stf_green_context_helper_handle h);
stf_exec_place_handle stf_exec_place_clone(stf_exec_place_handle h);
void stf_exec_place_destroy(stf_exec_place_handle h);
int stf_exec_place_is_host(stf_exec_place_handle h);
int stf_exec_place_is_device(stf_exec_place_handle h);
void stf_exec_place_get_dims(stf_exec_place_handle h, stf_dim4* out_dims);
size_t stf_exec_place_size(stf_exec_place_handle h);
void stf_exec_place_set_affine_data_place(stf_exec_place_handle h, stf_data_place_handle affine_dplace);
stf_exec_place_handle stf_exec_place_grid_from_devices(const int* device_ids, size_t count);
stf_exec_place_handle
stf_exec_place_grid_create(const stf_exec_place_handle* places, size_t count, const stf_dim4* grid_dims);
stf_exec_place_handle stf_exec_place_grid_reshape(stf_exec_place_handle grid, const stf_dim4* grid_dims);
stf_exec_place_handle stf_exec_place_grid_collapse_axes(stf_exec_place_handle grid, size_t first_axis, size_t last_axis);
void stf_exec_place_grid_destroy(stf_exec_place_handle grid);
stf_exec_place_scope_handle stf_exec_place_scope_enter(stf_exec_place_handle place, size_t idx);
void stf_exec_place_scope_exit(stf_exec_place_scope_handle scope);
stf_data_place_handle stf_exec_place_get_affine_data_place(stf_exec_place_handle h);
stf_exec_place_resources_handle stf_exec_place_resources_create(void);
void stf_exec_place_resources_destroy(stf_exec_place_resources_handle h);
CUstream stf_exec_place_pick_stream(stf_exec_place_resources_handle res, stf_exec_place_handle h, int for_computation);
stf_exec_place_handle stf_exec_place_get_place(stf_exec_place_handle h, size_t idx);
stf_exec_place_handle
stf_exec_place_green_ctx(stf_green_context_helper_handle helper, size_t idx, int use_green_ctx_data_place);
void stf_machine_init(void);
stf_data_place_handle stf_data_place_host(void);
stf_data_place_handle stf_data_place_device(int dev_id);
stf_data_place_handle stf_data_place_managed(void);
stf_data_place_handle stf_data_place_affine(void);
stf_data_place_handle stf_data_place_current_device(void);
stf_data_place_handle stf_data_place_composite(stf_exec_place_handle grid, stf_get_executor_fn mapper);
stf_data_place_handle stf_data_place_green_ctx(stf_green_context_helper_handle helper, size_t idx);
stf_data_place_handle stf_data_place_clone(stf_data_place_handle h);
void stf_data_place_destroy(stf_data_place_handle h);
int stf_data_place_get_device_ordinal(stf_data_place_handle h);
const char* stf_data_place_to_string(stf_data_place_handle h);
void* stf_data_place_allocate(stf_data_place_handle h, ptrdiff_t size, cudaStream_t stream);
void stf_data_place_deallocate(stf_data_place_handle h, void* ptr, size_t size, cudaStream_t stream);
int stf_data_place_allocation_is_stream_ordered(stf_data_place_handle h);
void* stf_data_place_allocate_nd(
  stf_data_place_handle h, const stf_dim4* data_dims, uint64_t elemsize, cudaStream_t stream);
typedef struct stf_cute_partition_opaque_t* stf_cute_partition_handle;
typedef struct stf_placement_stats
{
  uint64_t total_bytes; 
  uint64_t vm_bytes; 
  uint64_t block_size; 
  uint64_t nblocks; 
  uint64_t nallocs; 
  uint64_t total_samples; 
  uint64_t matching_samples; 
} stf_placement_stats;
typedef struct stf_partition_dim_spec
{
  int policy; 
  int mesh_axis; 
  uint64_t block; 
} stf_partition_dim_spec;
int stf_placement_evaluate(
  stf_exec_place_handle grid,
  stf_get_executor_fn mapper,
  const stf_dim4* data_dims,
  uint64_t elemsize,
  uint64_t probes,
  uint64_t block_size,
  stf_placement_stats* out_stats,
  uint64_t* bytes_per_grid_index);
int stf_placement_evaluate_partition(
  stf_exec_place_handle grid,
  stf_cute_partition_handle partition,
  uint64_t elemsize,
  uint64_t probes,
  uint64_t block_size,
  stf_placement_stats* out_stats,
  uint64_t* bytes_per_grid_index);
stf_cute_partition_handle stf_cute_partition_create(
  const stf_dim4* true_dims, const stf_dim4* grid_dims, const stf_partition_dim_spec* spec, size_t rank);
stf_cute_partition_handle stf_cute_partition_from_leaves(
  const uint64_t* place_extents,
  const int64_t* place_strides,
  const int* place_axes,
  size_t num_place_leaves,
  const uint64_t* local_extents,
  const int64_t* local_strides,
  size_t num_local_leaves,
  const stf_dim4* padded_dims,
  const stf_dim4* true_dims,
  const stf_dim4* grid_dims);
void stf_cute_partition_destroy(stf_cute_partition_handle h);
void stf_cute_partition_true_dims(stf_cute_partition_handle h, stf_dim4* out_dims);
void stf_cute_partition_padded_dims(stf_cute_partition_handle h, stf_dim4* out_dims);
void stf_cute_partition_grid_dims(stf_cute_partition_handle h, stf_dim4* out_dims);
size_t stf_cute_partition_num_place_leaves(stf_cute_partition_handle h);
size_t stf_cute_partition_num_local_leaves(stf_cute_partition_handle h);
void stf_cute_partition_get_place_leaves(stf_cute_partition_handle h, uint64_t* extents, int64_t* strides, int* axes);
void stf_cute_partition_get_local_leaves(stf_cute_partition_handle h, uint64_t* extents, int64_t* strides);
uint64_t stf_cute_partition_place_offset(stf_cute_partition_handle h, uint64_t place_index);
stf_data_place_handle stf_data_place_composite_cute(stf_exec_place_handle grid, stf_cute_partition_handle partition);
stf_get_executor_fn stf_partition_fn_blocked(int dim);
stf_get_executor_fn stf_partition_fn_cyclic(void);
typedef struct stf_logical_data_handle_t* stf_logical_data_handle;
typedef struct stf_host_launch_handle_t* stf_host_launch_handle;
stf_ctx_handle stf_ctx_create(void);
stf_ctx_handle stf_ctx_create_graph(void);
typedef struct stf_async_resources_opaque_t* stf_async_resources_handle;
stf_async_resources_handle stf_async_resources_create(void);
void stf_async_resources_destroy(stf_async_resources_handle h);
typedef enum stf_backend_kind
{
  STF_BACKEND_STREAM = 0, 
  STF_BACKEND_GRAPH  = 1, 
} stf_backend_kind;
typedef struct stf_ctx_options
{
  stf_backend_kind backend; 
  int has_stream; 
  cudaStream_t stream; 
  stf_async_resources_handle handle; 
} stf_ctx_options;
stf_ctx_handle stf_ctx_create_ex(const stf_ctx_options* opts);
void stf_ctx_finalize(stf_ctx_handle ctx);
stf_exec_place_resources_handle stf_ctx_get_place_resources(stf_ctx_handle ctx);
cudaStream_t stf_fence(stf_ctx_handle ctx);
int stf_ctx_wait(stf_ctx_handle ctx, stf_logical_data_handle ld, void* out, size_t size);
stf_logical_data_handle stf_logical_data(stf_ctx_handle ctx, void* addr, size_t sz);
stf_logical_data_handle
stf_logical_data_with_place(stf_ctx_handle ctx, void* addr, size_t sz, stf_data_place_handle dplace);
void stf_logical_data_set_symbol(stf_logical_data_handle ld, const char* symbol);
void stf_logical_data_destroy(stf_logical_data_handle ld);
stf_logical_data_handle stf_logical_data_empty(stf_ctx_handle ctx, size_t length);
stf_logical_data_handle stf_token(stf_ctx_handle ctx);
void stf_host_launch_set_user_data(stf_host_launch_handle h, const void* data, size_t size, void (*dtor)(void*));